7th。 实现字段注入的 sad path。